# raft-rs

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: rust.yml
src/: client.rs  main.rs  server.rs
src/core/: ballot_box_options.rs  closure_queue.rs  closure_queue_impl.rs  endpoint.rs  fsm_closure.rs  leader_change_context.rs  logger.rs  mod.rs  node.rs  node_id.rs  node_manager.rs  node_options.rs  peer_id.rs  raft_options.rs  readonly_option.rs  state_machine.rs  status.rs
src/protos/: diner.proto  enum.proto  log.proto  raft.proto  rpc.proto
src/protos_gen/: mod.rs
src/raft/: config.rs
src/tests/: test_node.rs
