[package]
name = "raft-rs"
version = "0.1.0"
authors = ["ran <snowfallvilla@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="client"
path="src/client.rs"

[dependencies]
futures = "0.1.28"
grpcio = "0.4.4"
protobuf = "2.8.0"
log = "0.4"
yansi = "0.5"
atty = "0.2.13"

[build-dependencies]
protoc-grpcio="1.0.2"