[package]
name = "raft-rs"
version = "0.1.0"
authors = ["ran <snowfallvilla@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="client"
path="src/client.rs"

[dependencies]
tonic="0.1.1"

[build-dependencies]
